# EdoTools

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.py
include/edoren/: Config.hpp  Function.hpp  Function.inl  Platform.hpp  PreDef.hpp  String.hpp  StringFormat.hpp  StringView.hpp  StringView.inl  TypeTraits.hpp  UTF.hpp  UTF.inl
include/edoren/container/: List.hpp  Map.hpp  SafeQueue.hpp  SafeQueue.inl  Set.hpp  Set.inl  Vector.hpp  Vector.inl
include/edoren/logging/: ConsoleLogHandler.hpp  LogHandler.hpp  LogManager.hpp  LogPriority.hpp
include/edoren/system/: FileSystem.hpp
include/edoren/threading/: ThreadPool.hpp  ThreadPool.inl
include/edoren/util/: Config.hpp  NonCopyable.hpp  Platform.hpp  Singleton.hpp
src/edoren/: String.cpp  StringView.cpp
src/edoren/logging/: ConsoleLogHandler.cpp  LogHandler.cpp  LogManager.cpp
src/edoren/system/: FileSystem.cpp
src/edoren/threading/: ThreadPool.cpp
test_package/Unitary/: FunctionTests.cpp  JSONTests.cpp  StringViewTests.cpp
test_package/Unitary/container/: VectorTests.cpp
tests/: CMakeLists.txt  conanfile.py
tests/Unitary/: FileSystemTests.cpp  FormattingTests.cpp  JSONTests.cpp  Main.cpp  SignalTests.cpp  StringTests.cpp  StringViewTests.cpp  UTFTests.cpp
tests/Unitary/container/: ListTests.cpp  MapTests.cpp  SetTests.cpp
